--- a/la_daurada/language/en.json
+++ b/la_daurada/language/en.json
@@ -1,6 +1,67 @@
 {
-    "name":"English",
-    "first":"La Daurada",
-    "second":"Be part of our community",
-    "third":"and get exclusive discounts"
+    "name":"English",   
+    "welcome-comunity":"Be part of our community",
+    "welcome-discount":"and get exclusive discounts",
+    "login-fb":"Login with Facebook",
+    "continue-email":"Continue with email",
+    "login":"Log in",
+    "sign-up":"Sign up",
+    "first-name":"First Name",
+    "enter-first-name":"Enter your first name",
+    "last-name":"Last name",
+    "enter-last-name":"Enter your last name",
+    "email":"Email*",
+    "enter-email":"Enter your email",
+    "password":"Password",
+    "enter-pass":"Enter your password",
+    "register-text":"By clicking on 'Register' you accept the ",
+    "privacy":"Privacy",
+    "policy":"Policy",
+    "and-the":"and the ",
+    "terms & condition":"Terms and Conditions",
+    "registration":"Registration",
+    "forgot-pass":"Forgot password?",
+    "recover-pass":"Recover password",
+    "sent-email":"We have sent you an email to ", 
+    "recover-text":"recover your password",
+    "home":"Home",
+    "event":"Event",
+    "ticket":"Ticket",
+    "membership":"Membership",
+    "profile":"Profile",
+    "upcoming-events":"Upcoming events",
+    "date":"29",
+    "month":"May",
+    "live-concert":"Watch Live Concert",
+    "location":"Pacha Barcelona",
+    "time":"Jue 10:00 - 12:00",
+    "tickets":"Tickets",
+    "ticket-first-title": "Loco Lunes",
+    "ticket-second-title":"Un Jueves Tonto",
+    "ticket-subtitle": "LUN, 31 OCT 2020 | 23:59 - 06:00",
+    "ticket-color-first-text": "GRATIS",
+    "ticket-color-second-text": "15€       ",
+    "ticket-number":"1",
+    "member-card":"Membership card",
+    "activated":"Activated",
+    "card-time":"23:37:45",
+    "card-text":"Show this code to our staff \nto activate your card",
+    "gmail-id":"alexa@gmail.com",
+    "message":"Message",
+    "user-info":"User information",
+    "privacy-policy":"Privacy policy",
+    "device-id":"Device ID: 1206354",
+    "app-version":"App version: 1.0.1",
+    "log-out":"Log out",
+    "info-name":"Name",
+    "date-of-birth":"Date of birth*",
+    "hint-date":"DD/MM/YYYY",
+    "gender":"Gender*",
+    "select-gender":"Select your gender",
+    "male":"Male",
+    "female":"Female",
+    "id-number":"ID Number",
+    "hint-id-number":"XXXXXXXXA"
+    
+
 }
