--- a/la_daurada/language/es.json
+++ b/la_daurada/language/es.json
@@ -1,6 +1,65 @@
 {
     "name":"Spanish",
-    "first":"la Dorada",
-    "second":"Sé parte de nuestra comunidad y",
-    "third":"obtén descuentos exclusivos"
+    "welcome-comunity":"¡Forma parte de nuestra comunidad y",
+    "welcome-discount":"consigue descuentos exclusivos!",
+    "login-fb":"Iniciar con Facebook",
+    "continue-email":"Continuar con el email",
+    "login":"Log in",
+    "sign-up":"Regístrate",
+    "first-name":"Primer nombre",
+    "enter-first-name":"Ponga su primer nombre",
+    "last-name":"Apellido",
+    "enter-last-name":"Ingrese su apellido",
+    "email":"Email*",
+    "enter-email":"Introduce tu correo electrónico",
+    "password":"Contraseña",
+    "enter-pass":"Ingresa tu contraseña",
+    "register-text":"Al hacer clic en 'Registrarme' aceptas las ",
+    "privacy":"Políticas de ",
+    "policy":"privacidad ",
+    "and-the":"y los ",
+    "terms & condition":"Términos y Condiciones",
+    "registration":"Registrarme",
+    "forgot-pass":"¿Has olvidado la contraseña?",
+    "recover-pass":"Recuperar contraseña",
+    "sent-email":"Te hemos enviado un correo para ", 
+    "recover-text":"recuperar la contraseña",
+    "home":"Inicio",
+    "event":"Evento",
+    "ticket":"Boleto",
+    "membership":"Afiliación",
+    "profile":"Perfil",
+    "upcoming-events":"Próximos Eventos",
+    "date":"29",
+    "month":"May",
+    "live-concert":"Concierto piano en streaming",
+    "location":"Pacha Barcelona",
+    "time":"Jue 10:00 - 12:00",
+    "tickets":"Entradas",
+    "ticket-first-title": "Loco Lunes",
+    "ticket-second-title":"Un Jueves Tonto",
+    "ticket-subtitle": "LUN, 31 OCT 2020 | 23:59 - 06:00",
+    "ticket-color-first-text": "GRATIS",
+    "ticket-color-second-text": "15€       ",
+    "ticket-number":"1",
+    "member-card":"Carnet",
+    "activated":"Activat",
+    "card-time":"23:37:45",
+    "card-text":"Ensenya aquest codi al nostre personal \nper activar el teu carnet",
+    "gmail-id":"alexa@gmail.com",
+    "message":"Idioma",
+    "user-info":"Informacion de usuario",
+    "privacy-policy":"Política de privacidad",
+    "device-id":"ID del dispositivo: 1206354",
+    "app-version":"Version de aplicacion: 1.0.1",
+    "log-out":"Cerrar sesión",
+    "info-name":"nombre",
+    "date-of-birth":"Fecha de nacimiento*",
+    "hint-date":"DD/MM/AAAA",
+    "gender":"Género*",
+    "select-gender":"Selecciona tu género",
+    "male":"Masculino",
+    "female":"Hembra",
+    "id-number":"DNI",
+    "hint-id-number":"XXXXXXXXA"
 }
